--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,82 +6,123 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:weightSum="7"
         android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
-            android:gravity="center"
-            android:background="#08E611"
-            android:text="A"
-            android:textSize="50sp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <LinearLayout
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
-        <TextView
-            android:gravity="center"
-            android:background="#535150"
-            android:text="B"
-            android:textSize="50sp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:text="1"
+                android:textSize="50sp"
+                android:background="#44FF00"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="6"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_weight="1"
+                android:text="3"
+                android:textSize="50sp"
+                android:background="#f20"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+            <TextView
+                android:layout_weight="1"
+                android:text="4"
+                android:textSize="50sp"
+                android:background="#DA75B1"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:weightSum="7"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <LinearLayout
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
-        <TextView
-            android:gravity="center"
-            android:background="#E615A1"
-            android:text="C"
-            android:textSize="50sp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
-        <TextView
-            android:gravity="center"
-            android:background="#E6ECB2"
-            android:text="D"
-            android:textSize="50sp"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:text="2"
+                android:textSize="50sp"
+                android:background="#B8C541"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_weight="1"
+                android:text="5"
+                android:textSize="50sp"
+                android:background="#2196F3"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+            <TextView
+                android:layout_weight="1"
+                android:text="6"
+                android:textSize="50sp"
+                android:background="#9C27B0"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_weight="1"
+                android:text="7"
+                android:textSize="50sp"
+                android:background="#4D035A"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+            <TextView
+                android:layout_weight="1"
+                android:text="8"
+                android:textSize="50sp"
+                android:background="#FF9800"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+            <TextView
+                android:layout_weight="1"
+                android:text="9"
+                android:textSize="50sp"
+                android:background="#888C8B"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <TextView
-            android:gravity="center"
-            android:background="#f20"
-            android:text="A"
-            android:textSize="50sp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:gravity="center"
-            android:textSize="50sp"
-            android:background="#E91E63"
-            android:text="B"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:gravity="center"
-            android:background="#CDDC39"
-            android:text="C"
-            android:textSize="50sp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <TextView
-            android:gravity="center"
-            android:background="#3F51B5"
-            android:text="D"
-            android:textSize="50sp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
 </LinearLayout>
